--- a/Trabajo pagina/html1.html
+++ b/Trabajo pagina/html1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="clasesitio.css">
-    <title>Cafeteria Asiago</title>
+    <title>¿que te ofrecemos?</title>
 </head>
 <body>
     <style>
@@ -69,6 +69,7 @@ line-height: 20px;
                 <h1>¿Que te ofrecemos?</h1>
             </div>
         </header>
+
         <main>
     </section>
       <div class="cuadro">
