--- a/Trabajo pagina/html2.html
+++ b/Trabajo pagina/html2.html
@@ -40,7 +40,7 @@ line-height: 20px;
     margin: 30px;
     border: 3px, solid;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size:20px;
+    font-size:18px;
     padding: 10px;
 }
 .cuadro2{
@@ -66,7 +66,7 @@ font-weight: 400;
 font-size: 19px;
 }
 h5{flex-direction:column;}
-.imagen{position: absolute;
+.imagen1{position: absolute;
 width: 100px;
 height: 100px;
 left: 500px;
@@ -74,6 +74,26 @@ top: 245px;
 }
 .img1{width: 423px;
 height: 365px;}
+
+.imagen2{position: absolute;
+width: 100px;
+height: 100px;
+left: 1000px;
+top: 245px;
+}
+.img2{width: 423px;
+height: 365px;
+}
+.imagen3{position: absolute;
+width: 100px;
+height: 100px;
+left: 750px;
+top: 650px;
+}
+.img3{width: 423px;
+height: 365px;
+}
+
     </style>
     <body>
         <header>
@@ -100,9 +120,16 @@ height: 365px;}
             <p>Medialunas con jamon y queso $200</p>         
         </h5>              
     </div>
-    <div class="imagen">
-        <img class="img1" src="https://as01.epimg.net/deporteyvida/imagenes/2018/06/19/portada/1529402043_039778_1529402207_noticia_normal_recorte1.jpg" alt="latte">
-    </div>    
+    <div class="imagen1">
+        <img class="img1" src="img/46349.jpg" alt="latte">
+    </div>
+    <div class="imagen2">
+        <img class="img2" src="img/recetas-de-cocina-cafe-cortado-opfhtdsxg5c55dsm4zyc01v88feskg3f1d2axwlglc.jpg" alt="cafe">
+    </div>
+    <div class="imagen3">
+        <img class="img3" src="img/tostada-con-aguacate.jpg" alt="tostada con agucate">
+    </div>
+
     </main>
 </body>
 </html>
