--- a/Trabajo pagina/index.html
+++ b/Trabajo pagina/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafeteria Asiago</title>
+    <title>Cafeteria Argento</title>
     <style>
         body{background-color: #e5c995; }
         div{
@@ -26,7 +26,7 @@ top: 20px;
 font-family: 'Inter';
 font-style: italic;
 font-weight: 200;
-font-size: 75px;
+font-size: 70px;
 line-height: 20px;
         }
         div#menu{position: absolute;
@@ -114,13 +114,13 @@ font-weight: 400;
    <body>
        <header>
            <div>
-               <h1>Cafeteria Asiago</h1>
+               <h1>Cafeteria Argento</h1>
            </div>
        </header>   
    <nav>
        <div id="menu"> 
      <h2><a class="botonenlace" href=""><span class="enlacemenu">Otras sucursales</span></a></h2>
-     <h3><a class="botonenlace" href=""><span class="enlacemenu">Menu</span></a></h3>
+     <h3><a class="botonenlace" href="html2.html"><span class="enlacemenu">Menu</span></a></h3>
      <h4><a class="botonenlace" href="html1.html"><span class="enlacemenu">¿Que te ofrecemos?</span></a></h4>
     </div>
  </nav>
