--- a/Trabajo pagina/index.html
+++ b/Trabajo pagina/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafeteria Argento</title>
     <style>
@@ -54,7 +54,7 @@ color: #000000;}
 h3{position: absolute;
 width: 105px;
 height: 56px;
-left: 920px;
+left: 575px;
 top: -19px;
 
 font-family: 'Average';
@@ -78,6 +78,23 @@ font-size: 32px;
 line-height: 39px;
 
 color: #000000;
+}
+h8{position: absolute;
+width: 267px;
+height: 56px;
+left: 1000px;
+top: 15px;
+
+font-family: 'Average';
+font-style: normal;
+font-weight: 400;
+font-size: 32px;
+line-height: 39px;
+
+color: #000000;
+}
+nav a:hover{
+    color: rgb(3, 0, 0);
 }
 div#imagen1{position: absolute;
     width: 500px;
@@ -122,9 +139,11 @@ font-weight: 400;
      <h2><a class="botonenlace" href=""><span class="enlacemenu">Otras sucursales</span></a></h2>
      <h3><a class="botonenlace" href="html2.html"><span class="enlacemenu">Menu</span></a></h3>
      <h4><a class="botonenlace" href="html1.html"><span class="enlacemenu">¿Que te ofrecemos?</span></a></h4>
+     <h8><a class="botonenlace" href="html3.html"><span class="enlacemenu">Delivery</span></a></h8>
     </div>
  </nav>
     </header>
+
     <div id="imagen1"><img src="img/images.jpg" width="500"  height="500" alt="latte">
     <h5>Late</h5>
     </div>
@@ -132,7 +151,8 @@ font-weight: 400;
     <h6>Cafe </h6>
     </div>
     <div id="imagen3"><img src="img/fdb712acc5a31c3ee3cdffcf269d1434.jpg" width="500" height="500" alt="bocadillos">
-    <h7>bocadillos</h7>
+    <h7>bocadillos</h7>  
     </div>
+   
 </body>
 </html>
